# usb-over-ip

./: CMakeLists.txt  LICENSE  README.md  build.bat
android/: README.md  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: banner.xml  ic_keyboard.xml  ic_storage.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_tv.xml  item_usb_device.xml
android/app/src/main/res/menu/: main_menu.xml
client/: vusb_capture.c  vusb_capture.h  vusb_client.c  vusb_client.h  vusb_client_enhanced.c  vusb_client_urb.c  vusb_client_urb.h
docs/: DEVELOPER.md
driver/: trace.h  vusb.inf  vusb.sln  vusb.vcxproj  vusb_device.c  vusb_driver.c  vusb_driver.h  vusb_ioctl.c  vusb_urb.c  vusb_urb.h
macos/: README.md
macos/VusbClient/: Info.plist  VusbClient.entitlements  VusbClientApp.swift
macos/VusbClient.xcodeproj/: project.pbxproj
macos/VusbClient/Assets.xcassets/AccentColor.colorset/: Contents.json
macos/VusbClient/Models/: Models.swift
macos/VusbClient/Network/: VusbNetworkClient.swift
macos/VusbClient/Protocol/: VusbProtocol.swift
macos/VusbClient/USB/: InterruptPoller.swift  UsbDeviceManager.swift
macos/VusbClient/Views/: ContentView.swift  DeviceListView.swift  DeviceRowView.swift  SettingsView.swift
protocol/: vusb_ioctl.h  vusb_protocol.h
server/: vusb_server.c  vusb_server.h  vusb_server_urb.c  vusb_server_urb.h
tools/: vusb_install.c  vusb_test.c
userspace/: README.md  vusb_userspace.c  vusb_userspace.h  vusb_userspace_main.c
(+19 files in other folders)
